module(name = "roo_testing", version = "1.2.0")

bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_python", version = "1.8.2")
bazel_dep(name = "rules_license", version = "1.0.0")

bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "protobuf", version = "33.4")

bazel_dep(name = "glog", version = "0.7.1.bcr.1")
